# iqa-project

./: .gitignore  .gitmodules  README.md  check_labels_bug.py  debug_labels.py  debug_scene_conversation.py  eval_sequential_model.py  eval_sequential_model_backup.py  evaluate_model.py  finetune.py  pre_training_checklist.py  pyproject.toml  run_quick_demo.sh  run_sequential_training.sh  save_checkpoint_as_final.py  test_dataset_context.py  test_full_split.py  test_kl_loss.py  test_labels_fix.py  test_labels_simple.py  train_quality_only.ipynb  train_sequential_configurable.ipynb  train_sequential_pipeline.ipynb  train_sequential_pipeline.py  verify_labels_fix.py
fake_data/: config.csv
src/: check.py  config.py  dataset.py
src/dataset-preprocessing-scripts/: process-liqe-labels.py
src/dataset_preprocessing_scripts/: add_set_column.py  csiq_add_reference_image_column.py  kadid_10k_add_reference_image_column.py  koniq_10k_add_set_column.py  live_add_reference_image_column_and_adjust_distortion_type.py  live_remove_extra_images_in_subdirectories.py  process_liqe_labels.py
src/new_train/: config.py  dataset_adapter.py  iqa_trainer.py  metrics.py  model_wrapper.py  plot_utils.py  processor_no_cut.py  train_distortion.py  train_iqa_lora.py  train_scene.py
