[project]
name = "iqa-project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub[cli]>=0.35.3",
    "pandas>=2.3.3",
]

[tool.pyright]
diagnosticMode = "workspace"
strict = ["src/dataset_preprocessing_scripts/"]

[[tool.pyright.executionEnvironments]]
root = "src/dataset_preprocessing_scripts/"
diagnosticMode = "workspace"
reportCallInDefaultInitializer = "warning"
reportImplicitOverride = "warning"
reportImplicitStringConcatenation = "warning"
reportImportCycles = "warning"
reportMissingSuperCall = "warning"
reportPropertyTypeMismatch = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnreachable = "warning"
reportUnusedCallResult = "warning"

[tool.isort]
no_sections = true
lines_after_imports = 1
comment_prefix = " #"
line_length = 99999
