[project]
name = "iqa-project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flash-attn>=2.8.3",
    "icecream>=2.1.8",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "torch~=2.8.0",
    "torchvision>=0.23.0",
    "transformers[torch]~=4.47.0",
]

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.35.3",
]

[tool.uv]
preview = true

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.pyright]
diagnosticMode = "workspace"
strict = ["src/dataset_preprocessing_scripts/"]

[[tool.pyright.executionEnvironments]]
root = "src/dataset_preprocessing_scripts/"
diagnosticMode = "workspace"
reportCallInDefaultInitializer = "warning"
reportImplicitOverride = "warning"
reportImplicitStringConcatenation = "warning"
reportImportCycles = "warning"
reportMissingSuperCall = "warning"
reportPropertyTypeMismatch = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnreachable = "warning"
reportUnusedCallResult = "warning"

[tool.isort]
no_sections = true
lines_after_imports = 1
comment_prefix = " #"
line_length = 99999
